package com.example.budgetbuddy.ui.screens.transactions.list

const val TestTagTransactionsListScreenTitle = "TestTagTransactionsListScreenTitle"
const val TransactionItemCategory = "TransactionItemCategory"
const val TransactionItemType = "TransactionItemType"
const val TransactionLazyList = "TransactionLazyList"
const val TransactionLazyListItem = "TransactionLazyListItem"
const val TransactionEmptyList = "TransactionEmptyList"
const val TransactionFilterItem = "TransactionFilterItem"
