package com.example.budgetbuddy.ui.screens.home

const val TestTagHomeScreenAddMoneyButton = "TestTagHomeScreenAddMoneyButton"
const val TestTagHomeScreenTransactionsTitle = "TestTagHomeScreenTransactionsTitle"
const val TestTagHomeScreenTransactionsFAB = "TestTagHomeScreenTransactionsTitle"
